--- a/migration/Cargo.toml
+++ b/migration/Cargo.toml
@@ -4,5 +4,6 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+polars = "0.45.1"
 tokio = { version = "1.42.0", features = ["full"] }
 tokio-postgres = "0.7.12"
