--- a/migration/Cargo.toml
+++ b/migration/Cargo.toml
@@ -5,5 +5,6 @@ edition = "2021"
 
 [dependencies]
 polars = "0.45.1"
+polars-io = "0.45.1"
 tokio = { version = "1.42.0", features = ["full"] }
 tokio-postgres = "0.7.12"
