--- a/migration/Cargo.toml
+++ b/migration/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+calamine = "0.26.1"
 polars = "0.45.1"
 polars-io = "0.45.1"
 tokio = { version = "1.42.0", features = ["full"] }
