--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -5,7 +5,7 @@
       "label": "Build",
       "type": "shell",
       "command": "cargo",
-      "args": ["build"],
+      "args": ["build", "-q"],
       "group": {
         "kind": "build",
         "isDefault": true
