--- a/migration/Cargo.toml
+++ b/migration/Cargo.toml
@@ -5,7 +5,8 @@ edition = "2021"
 
 [dependencies]
 calamine = "0.26.1"
-polars = "0.45.1"
+openpyxl = "0.1.0"
+polars = {version = "0.45.1", features = ["lazy"]}
 polars-io = "0.45.1"
 tokio = { version = "1.42.0", features = ["full"] }
 tokio-postgres = "0.7.12"
