--- a/migration/Cargo.toml
+++ b/migration/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 calamine = "0.26.1"
+itertools = "0.13.0"
 openpyxl = "0.1.0"
 polars = {version = "0.45.1", features = ["lazy"]}
 polars-io = "0.45.1"
