--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
       "name": "Debug Migration - Py",
       "type": "debugpy",
       "request": "launch",
-      "program": "${workspaceFolder}/upload.py",
+      "program": "${workspaceFolder}/main.py",
       "console": "integratedTerminal",
       "python": "${workspaceFolder}/.venv/Scripts/python",
       "cwd": "${workspaceFolder}"
